fix overflow

--- a/src/pages/Languages/Orthography/Orthography.less
+++ b/src/pages/Languages/Orthography/Orthography.less
@@ -93,10 +93,10 @@
     font: var(--font-mono);
   }
   &__preview {
+    hyphens: auto;
     padding: var(--text-padding);
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    align-items: center;
     column-gap: var(--text-inline-padding);
 
     &-div {
